Update PostgreSQL connection details in properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=quiz
 server.port=${PORT:8084}   
 
-# postgresql://root:FPCN0XKeDNa5ojC0xO9Bu0oGonOhtm5G@dpg-d4e3mqidbo4c73d8ef20-a.oregon-postgres.render.com/quiz_g2et
+# postgresql://root:aLg7is1SsizkKvbTFwiKBNdAJZt59EpU@dpg-d4gov5hr0fns739p698g-a.singapore-postgres.render.com/quizwebsite
 # PostgreSQL Configuration for Render
-spring.datasource.url=jdbc:postgresql://dpg-d4e3mqidbo4c73d8ef20-a.oregon-postgres.render.com/quiz_g2et
+spring.datasource.url=jdbc:postgresql://dpg-d4gov5hr0fns739p698g-a.singapore-postgres.render.com/quizwebsite
 spring.datasource.username=root
-spring.datasource.password=FPCN0XKeDNa5ojC0xO9Bu0oGonOhtm5G
+spring.datasource.password=aLg7is1SsizkKvbTFwiKBNdAJZt59EpU
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate/JPA Config
